--- a/src/assets/fontello/css/fontello-codes.css
+++ b/src/assets/fontello/css/fontello-codes.css
@@ -11,6 +11,7 @@
 .icon-right:before { content: '\e809'; } /* '' */
 .icon-up:before { content: '\e80a'; } /* '' */
 .icon-cancel-1:before { content: '\e80b'; } /* '' */
+.icon-location:before { content: '\e80c'; } /* '' */
 .icon-down-open:before { content: '\f004'; } /* '' */
 .icon-up-open:before { content: '\f005'; } /* '' */
 .icon-right-open:before { content: '\f006'; } /* '' */
