--- a/src/assets/fontello/css/fontello.css
+++ b/src/assets/fontello/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?11541888');
-  src: url('../font/fontello.eot?11541888#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?11541888') format('woff2'),
-       url('../font/fontello.woff?11541888') format('woff'),
-       url('../font/fontello.ttf?11541888') format('truetype'),
-       url('../font/fontello.svg?11541888#fontello') format('svg');
+  src: url('../font/fontello.eot?95642499');
+  src: url('../font/fontello.eot?95642499#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?95642499') format('woff2'),
+       url('../font/fontello.woff?95642499') format('woff'),
+       url('../font/fontello.ttf?95642499') format('truetype'),
+       url('../font/fontello.svg?95642499#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?11541888#fontello') format('svg');
+    src: url('../font/fontello.svg?95642499#fontello') format('svg');
   }
 }
 */
@@ -66,6 +66,7 @@
 .icon-right:before { content: '\e809'; } /* '' */
 .icon-up:before { content: '\e80a'; } /* '' */
 .icon-cancel-1:before { content: '\e80b'; } /* '' */
+.icon-location:before { content: '\e80c'; } /* '' */
 .icon-down-open:before { content: '\f004'; } /* '' */
 .icon-up-open:before { content: '\f005'; } /* '' */
 .icon-right-open:before { content: '\f006'; } /* '' */
