--- a/src/style/layout/_header.scss
+++ b/src/style/layout/_header.scss
@@ -48,6 +48,14 @@
             top: 20px;
         }
     }
+    @include max-phone {
+        padding: 10px;
+
+        .lang-btn {
+            top: 14px;
+            right: 45px;
+        }
+    }
 
     @include max-phonemini {
         padding: 0 20px 5px;
