--- a/src/style/element/_card.scss
+++ b/src/style/element/_card.scss
@@ -73,7 +73,7 @@
     }
 
     @include max-phone {
-        width: 326px;
+        width: 326px !important;
         padding-right: 10px !important;
     }
 
